--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h2 class="font-bold uppercase text-xl text-amber-500 mb-4 lg:text-2xl">About Me</h2>
-                    <p class="text-slate-300 font-medium text-base lg:text-lg">I am a third year student of Amikom
+                    <p class="text-slate-300 font-medium text-base lg:text-lg">Tes I am a third year student of Amikom
                         University Yogyakarta majoring information system.
                         I am a passionate and adaptable person who have an endless passion for web development. I am
                         eager to learn and expand my knowledge and skills.</p>
