--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-bold uppercase text-amber-500 text-xl mb-4 lg:text-2xl">Experience</h3>
                     <p class="text-slate-300 font-medium text-base mb-6"><span
-                            class="text-bold text-slate-50">2019-Present | Universitas Amikom Yogyakarta</span>
-                        <br>Bachelor of Information System (GPA 3.63)
+                            class="text-bold text-slate-50">2019-2023 | AMIKOM University, Yogyakarta</span>
+                        <br>Bachelor of Information System (GPA 3.6)
                     </p>
                 </div>
                 <div class="w-full px-4 mb-10 lg:w-1/4">
