--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-bold uppercase text-amber-500 text-xl mb-4 lg:text-2xl">Experience</h3>
                     <p class="text-slate-300 font-medium text-base mb-6"><span
-                            class="text-bold text-slate-50">2019-2023 | AMIKOM University, Yogyakarta</span>
+                            class="text-bold text-slate-50">November 2019 - 2023 | AMIKOM University, Yogyakarta</span>
                         <br>Bachelor of Information System (GPA 3.6)
                     </p>
                 </div>
