--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                 <div class="w-full px-4 mb-10 lg:w-1/4">
                     <h2 class="font-bold uppercase text-xl text-amber-500 mb-4 lg:text-2xl">skills</h2>
                     <p class="text-slate-300 font-medium text-base lg:text-lg">
-                        HTML<br>
-                        CSS<br>
                         PHP<br>
-                        JavaScript
+                        JavaScript<br>
+                        Laravel Framework<br>
+                        CodeIgniter Framework
                     </p>
                 </div>
                 <div class="w-full px-4 mb-10 lg:w-1/4">
