--- a/index.html
+++ b/index.html
@@ -114,18 +114,19 @@
                 <div class="w-full px-4 mb-10 lg:w-1/4">
                     <h2 class="font-bold uppercase text-xl text-amber-500 mb-4 lg:text-2xl">skills</h2>
                     <p class="text-slate-300 font-medium text-base lg:text-lg">
+                        HTML<br>
+                        CSS<br>
                         PHP<br>
-                        JavaScript<br>
-                        Laravel Framework<br>
-                        CodeIgniter Framework
+                        JavaScript
                     </p>
                 </div>
                 <div class="w-full px-4 mb-10 lg:w-1/4">
                     <h2 class="font-bold uppercase text-xl text-bg opacity-0 mb-4 lg:text-2xl">skills</h2>
                     <p class="text-slate-300 font-medium text-base lg:text-lg">
-                        Laravel<br>
-                        Nodejs<br>
-                        expres js<br>
+                        Laravel Framework<br>
+                        CodeIgniter Framework
+                        Microsoft Word<br>
+                        Microsoft Excel
                     </p>
                 </div>
             </div>
