--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h2 class="font-bold uppercase text-xl text-bg opacity-0 mb-4 lg:text-2xl">skills</h2>
                     <p class="text-slate-300 font-medium text-base lg:text-lg">
                         Laravel Framework<br>
-                        CodeIgniter Framework
+                        CodeIgniter Framework<br>
                         Microsoft Word<br>
                         Microsoft Excel
                     </p>
