--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h2 class="font-bold uppercase text-xl text-amber-500 mb-4 lg:text-2xl">About Me</h2>
-                    <p class="text-slate-300 font-medium text-base lg:text-lg">I am a third year student of Amikom
-                        University Yogyakarta majoring information system.
-                        I am a passionate and adaptable person who have an endless passion for web development. I am
-                        eager to learn and expand my knowledge and skills.</p>
+                    <p class="text-slate-300 font-medium text-base lg:text-lg">I am a fresh graduated of Amikom University Yogyakarta majoring information system. I am a passionate and adaptable person who have an endless passion for web development. I am eager to learn and expand my knowledge and skills.</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-bold uppercase text-amber-500 text-xl mb-4 lg:text-2xl">Education</h3>
@@ -149,7 +146,7 @@
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/img/1.png" alt="" class="w-full">
                     </div>
-                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Landing Page</h3>
+                    <h3 href="https://www.codepolitan.com/c/O1ETFUD/" class="font-semibold text-xl text-slate-50 mt-5 mb-3">learn basic javascript at codepolitan</h3>
                     <p class="font-medium text-base text-slate-300">Lorem ipsum dolor sit amet consectetur adipisicing
                         elit. Magni nisi repellendus maiores.</p>
                 </div>
