--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-bold uppercase text-amber-500 text-xl mb-4 lg:text-2xl">Education</h3>
                     <p class="text-slate-300 font-medium text-base mb-6"><span
-                            class="text-bold text-slate-50">November 2019 - 2023 | AMIKOM University, Yogyakarta</span>
+                            class="text-bold text-slate-50">November 2019 - August 2023 | AMIKOM University, Yogyakarta</span>
                             <br>Bachelor of Information System (GPA 3.6)
                     </p>
                 </div>
@@ -146,34 +146,31 @@
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/img/1.png" alt="" class="w-full">
                     </div>
-                    <h3 href="https://www.codepolitan.com/c/O1ETFUD/" class="font-semibold text-xl text-slate-50 mt-5 mb-3">learn basic javascript at codepolitan</h3>
-                    <p class="font-medium text-base text-slate-300">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Magni nisi repellendus maiores.</p>
+                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.codepolitan.com/c/O1ETFUD/" class="text-slate-50 underline hover:text-slate-100">Learn basic JavaScript at CodePolitan</a></h3>
+                    <p class="font-medium text-base text-slate-300">Date Publised : July 2022 </p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/img/2.png" alt="" class="w-full">
                     </div>
-                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Landing Page</h3>
-                    <p class="font-medium text-base text-slate-300">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Magni nisi repellendus maiores.</p>
+                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/EYX42QWOWZDL" class="text-slate-50 underline hover:text-slate-100">Learn basic JavaScript at Dicoding</a></h3>
+                    <p class="font-medium text-base text-slate-300">Date Publised :July 2022 </p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/img/3.png" alt="" class="w-full">
                     </div>
-                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Landing Page</h3>
-                    <p class="font-medium text-base text-slate-300">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Magni nisi repellendus maiores.</p>
+                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/0LZ01N4E0P65" class="text-slate-50 underline hover:text-slate-100">learn to create back-end applications for beginners</a></h3>
+                    <p class="font-medium text-base text-slate-300">Date Publised : August 2022 </p>
                 </div>
-                <div class="mb-12 p-4 md:w-1/2">
+                <!-- <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <img src="dist/img/4.png" alt="" class="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Landing Page</h3>
                     <p class="font-medium text-base text-slate-300">Lorem ipsum dolor sit amet consectetur adipisicing
                         elit. Magni nisi repellendus maiores.</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -193,23 +190,19 @@
                 <div class="w-full px-4 flex flex-wrap justify-center xl:w-9/12 xl:mx-auto">
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/img/1.png" alt="" class="w-full">
+                            <img src="dist/img/siakad.png" alt="" class="w-full">
                         </div>
-                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Landing Page</h3>
-                        <p class="font-medium text-base text-slate-300">Lorem ipsum dolor sit amet consectetur
-                            adipisicing
-                            elit. Magni nisi repellendus maiores.</p>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">academy information system website</h3>
+                        <p class="font-medium text-base text-slate-300">An academic information system is a website that displays information related to school academics. This website was created using HTML, CSS, PHP, Laravel Framework, MySQL database and for appearance using a template from Gentelella.</p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
-                            <img src="dist/img/2.png" alt="" class="w-full">
+                            <img src="dist/img/divanusa.png" alt="" class="w-full">
                         </div>
-                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Landing Page</h3>
-                        <p class="font-medium text-base text-slate-300">Lorem ipsum dolor sit amet consectetur
-                            adipisicing
-                            elit. Magni nisi repellendus maiores.</p>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Carbon market website</h3>
+                        <p class="font-medium text-base text-slate-300">Carbon market website is a website that sells carbon emissions. This website is used using HTML, CSS, Laravel Framework, and MySQL database.</p>
                     </div>
-                    <div class="mb-12 p-4 md:w-1/2">
+                    <!-- <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/3.png" alt="" class="w-full">
                         </div>
@@ -226,7 +219,7 @@
                         <p class="font-medium text-base text-slate-300">Lorem ipsum dolor sit amet consectetur
                             adipisicing
                             elit. Magni nisi repellendus maiores.</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
     </section>
