--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                             class="block font-bold text-slate-50 text-4xl mt-1 lg:text-5xl">Muhammad
                             Fajar Ash Shiddiq</span>
                     </h1>
-                    <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl mt-5">Web Developer | Back End
-                        Developer
+                    <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl mt-5">Web Developer 
                     </h2>
                     <p class="font-medium text-slate-300 mb-10 leading-relaxed">Freshgraduated Information System
                         Student at Universitas Amikom Yogyakarta</p>    
