--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/siakad.png" alt="" class="w-full">
                         </div>
-                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">academy information system website</h3>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Academy information system website</h3>
                         <p class="font-medium text-base text-slate-300">An academic information system is a website that displays information related to school academics. This website was created using HTML, CSS, PHP, Laravel Framework, MySQL database and for appearance using a template from Gentelella.</p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
@@ -289,7 +289,7 @@
                             <path fill="currentColor"
                                 d="M12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5M12,2A7,7 0 0,1 19,9C19,14.25 12,22 12,22C12,22 5,14.25 5,9A7,7 0 0,1 12,2M12,4A5,5 0 0,0 7,9C7,10 7,12 12,18.71C17,12 17,10 17,9A5,5 0 0,0 12,4Z" />
                         </svg>
-                        <p class="px-4">Jl. Ringin Raya No.23b, Yogyakarta, Indonesia</p>
+                        <p class="px-4">Banda Aceh, Indonesia</p>
                     </div>
                 </div>
                 <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/2 lg:w-1/4">
