Update content footer

--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
                 <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/2 lg:w-1/4">
                     <h3 class="font-bold text-lg text-white mb-2">Content</h3>
                     <ul>
-                        <li><a href="" class="inline-block text-base hover:text-amber-500">Home</a></li>
-                        <li><a href="" class="inline-block text-base hover:text-amber-500">About</a></li>
-                        <li><a href="" class="inline-block text-base hover:text-amber-500">Sertificate</a></li>
-                        <li><a href="" class="inline-block text-base hover:text-amber-500">Portfolio</a></li>
+                        <li><a href="#home" class="inline-block text-base hover:text-amber-500">Home</a></li>
+                        <li><a href="#about" class="inline-block text-base hover:text-amber-500">About</a></li>
+                        <li><a href="#about" class="inline-block text-base hover:text-amber-500">Sertificate</a></li>
+                        <li><a href="#portfolio" class="inline-block text-base hover:text-amber-500">Portfolio</a></li>
                     </ul>
 
                 </div>
