perbaiki link footer

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <ul>
                         <li><a href="#home" class="inline-block text-base hover:text-amber-500">Home</a></li>
                         <li><a href="#about" class="inline-block text-base hover:text-amber-500">About</a></li>
-                        <li><a href="#about" class="inline-block text-base hover:text-amber-500">Sertificate</a></li>
+                        <li><a href="#sertificate" class="inline-block text-base hover:text-amber-500">Sertificate</a></li>
                         <li><a href="#portfolio" class="inline-block text-base hover:text-amber-500">Portfolio</a></li>
                     </ul>
 
