--- a/index.html
+++ b/index.html
@@ -143,21 +143,22 @@
             <div class="w-full px-4 flex flex-wrap justify-center xl:w-9/12 xl:mx-auto">
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/1.png" alt="" class="w-full">
+                        <a href="https://www.codepolitan.com/c/O1ETFUD/" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/1.png" alt="" class="w-full"></a>
+                        
                     </div>
                     <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.codepolitan.com/c/O1ETFUD/" class="text-slate-50 underline hover:text-slate-100">Learn basic JavaScript at CodePolitan</a></h3>
                     <p class="font-medium text-base text-slate-300">Date Publised : July 2022 </p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/2.png" alt="" class="w-full">
+                        <a href="https://www.dicoding.com/certificates/EYX42QWOWZDL" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/2.png" alt="" class="w-full"></a>
                     </div>
                     <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/EYX42QWOWZDL" class="text-slate-50 underline hover:text-slate-100">Learn basic JavaScript at Dicoding</a></h3>
                     <p class="font-medium text-base text-slate-300">Date Publised :July 2022 </p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/3.png" alt="" class="w-full">
+                        <a href="https://www.dicoding.com/certificates/0LZ01N4E0P65" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/3.png" alt="" class="w-full"></a>
                     </div>
                     <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/0LZ01N4E0P65" class="text-slate-50 underline hover:text-slate-100">learn to create back-end applications for beginners</a></h3>
                     <p class="font-medium text-base text-slate-300">Date Publised : August 2022 </p>
