--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
             <div class="w-full px-4 flex flex-wrap justify-center xl:w-9/12 xl:mx-auto">
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
+                        <a href="https://www.freecodecamp.org/certification/fcc944cbf4b-915b-4e24-82b7-f91d5318171d/responsive-web-design" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/5.png" alt="" class="w-full"></a>
+                        
+                    </div>
+                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.freecodecamp.org/certification/fcc944cbf4b-915b-4e24-82b7-f91d5318171d/responsive-web-design" class="text-slate-50 underline hover:text-slate-100">Responsive Web Design</a></h3>
+                    <p class="font-medium text-base text-slate-300">Date Publised : April 2024 </p>
+                </div>
+                <div class="mb-12 p-4 md:w-1/2">
+                    <div class="rounded-md shadow-md overflow-hidden">
                         <a href="https://www.codepolitan.com/c/O1ETFUD/" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/1.png" alt="" class="w-full"></a>
                         
                     </div>
