--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h2 class="font-bold uppercase text-xl text-amber-500 mb-4 lg:text-2xl">About Me</h2>
-                    <p class="text-slate-300 font-medium text-base lg:text-lg">I am a fresh graduated of Amikom University Yogyakarta majoring information system. I am a passionate and adaptable person who have an endless passion for web development. I am eager to learn and expand my knowledge and skills.</p>
+                    <p class="text-slate-300 font-medium text-base lg:text-lg">As an Information Systems graduate, I have a great drive to continue learning and limitless exploration. Responsible for what I do, I am always ready to face new challenges by adapting quickly. I also often use Microsoft Office in my daily activities and like learning about PHP programming. My strong interest in entrepreneurship and technology broadened my view of the potential of innovation. I am committed to self-development through active participation in relevant seminars and workshops.</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-bold uppercase text-amber-500 text-xl mb-4 lg:text-2xl">Education</h3>
