update desc sertificate

--- a/index.html
+++ b/index.html
@@ -146,39 +146,56 @@
                         <a href="https://www.freecodecamp.org/certification/fcc944cbf4b-915b-4e24-82b7-f91d5318171d/responsive-web-design" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/5.png" alt="" class="w-full"></a>
                         
                     </div>
-                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.freecodecamp.org/certification/fcc944cbf4b-915b-4e24-82b7-f91d5318171d/responsive-web-design" class="text-slate-50 underline hover:text-slate-100">Responsive Web Design</a></h3>
-                    <p class="font-medium text-base text-slate-300">Date Publised : April 2024 </p>
+                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.freecodecamp.org/certification/fcc944cbf4b-915b-4e24-82b7-f91d5318171d/responsive-web-design" class="text-slate-50 underline hover:text-slate-100">RESPONSIVE WEB DESIGN</a></h3>
+                    <p class="font-medium text-base text-slate-300 mb-4 ">Publisher : FreeCodeCamp | April 2024 </p>
+                    <ul class="list-disc text-slate-300 ">
+                        <li class="mb-1">Learn basic CSS and HTML</li>
+                        <li class="mb-1">Learn how to use CSS variables, CSS Grid, CSS animation, and CSS transforms.</li>
+                        <li class="mb-1">Learn how to use CSS Box Model, Flexbox, Typography, and CSS pseudo selector.</li>
+                        <li class="mb-1">Learn how to make responsive web design using media queries.</li>
+                    </ul>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <a href="https://www.codepolitan.com/c/O1ETFUD/" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/1.png" alt="" class="w-full"></a>
+                        <a href="_blank" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/6.png" alt="" class="w-full"></a>
                         
                     </div>
-                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.codepolitan.com/c/O1ETFUD/" class="text-slate-50 underline hover:text-slate-100">Learn basic JavaScript at CodePolitan</a></h3>
-                    <p class="font-medium text-base text-slate-300">Date Publised : July 2022 </p>
-                </div>
-                <div class="mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <a href="https://www.dicoding.com/certificates/EYX42QWOWZDL" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/2.png" alt="" class="w-full"></a>
-                    </div>
-                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/EYX42QWOWZDL" class="text-slate-50 underline hover:text-slate-100">Learn basic JavaScript at Dicoding</a></h3>
-                    <p class="font-medium text-base text-slate-300">Date Publised :July 2022 </p>
+                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">GIT AND GITHUB</h3>
+                    <p class="font-medium text-base text-slate-300 mb-4">Publisher : MySKILL | July 2024</p>
+                    <ul class="list-disc text-slate-300 ">
+                        <li class="mb-1">Learn how to use GIT and GITHUB using the commands git init, git add, git commit, git push, and git pull.</li>
+                        <li class="mb-1">Learn how to create a new repository on GitHub, cloning a repository and forking a repository on GitHub.</li>
+                        <li class="mb-1">learn how to work with a team by branching, checkout, and merging between branches.</li>
+                        <li class="mb-1">Learn how to undo changes, using reset, revert, and also restore.</li>
+                    </ul>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
                         <a href="https://www.dicoding.com/certificates/0LZ01N4E0P65" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/3.png" alt="" class="w-full"></a>
                     </div>
-                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/0LZ01N4E0P65" class="text-slate-50 underline hover:text-slate-100">learn to create back-end applications for beginners</a></h3>
-                    <p class="font-medium text-base text-slate-300">Date Publised : August 2022 </p>
+                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/0LZ01N4E0P65" class="text-slate-50 underline hover:text-slate-100">Back-end applications for beginners</a></h3>
+                    <p class="font-medium text-base text-slate-300 mb-4 ">Publisher : Dicoding | August 2022 </p>
+                    <ul class="list-disc text-slate-300 ">
+                        <li class="mb-1">Get to know the role of front-end and back-end, how clients and servers communicate via the HTTP protocol, and the RESTFul API architecture in building web services.</li>
+                        <li class="mb-1">Get to know Node.js and know the basics of Node.js such as global and process objects, modularization, Node Package Manager (NPM), eventing, file systems, and stream techniques.</li>
+                        <li class="mb-1">Building Web Services using Node.js native and through the Hapi framework, and building a simple RESTFul API.</li>
+                        <li class="mb-1">Learn how to use Amazon EC2, operate Amazon EC2 over SSH, run RESTFul APIs on Amazon EC2.</li>
+                        <li class="mb-1">Consumed RESTful APIs for testing purposes and wrote automated test scenarios using Postman.</li>
+                    </ul>
                 </div>
-                <!-- <div class="mb-12 p-4 md:w-1/2">
+                <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/4.png" alt="" class="w-full">
+                        <a href="https://www.dicoding.com/certificates/EYX42QWOWZDL" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/2.png" alt="" class="w-full"></a>
                     </div>
-                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Landing Page</h3>
-                    <p class="font-medium text-base text-slate-300">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Magni nisi repellendus maiores.</p>
-                </div> -->
+                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/EYX42QWOWZDL" class="text-slate-50 underline hover:text-slate-100">Basic JavaScript</a></h3>
+                    <p class="font-medium text-base text-slate-300 mb-4 ">Publisher : Dicoding | July 2022 </p>
+                    <ul class="list-disc text-slate-300 ">
+                        <li class="mb-1">Learn JavaScript fundamentals such as Variables, Data Types, and Loops.</li>
+                        <li class="mb-1">Learn data structures, how to store and manage more complex data using Objects, Arrays, Maps, and Set.</li>
+                        <li class="mb-1">Learn how to use Functions and Object-Oriented Programming concepts such as creating Class, Properties and Methods from Class.</li>
+                        <li class="mb-1">Learn how to Setup Environment, Module, Error Handling, Concurrency, and JavaScript Testing.</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
