change bg sertificate and portfolio

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <!-- About Section End -->
 
     <!-- Sertificate section start -->
-    <section id="sertificate" class="pt-20 pb-16 bg-bg">
+    <section id="sertificate" class="pt-20 pb-16 bg-biru">
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
@@ -202,7 +202,7 @@
     <!-- Sertificate Section End -->
 
     <!-- Portfolio Section Start -->
-    <section id="portfolio" class="pt-20 pb-16">
+    <section id="portfolio" class="pt-20 pb-16 bg-bg">
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
