--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="rounded-md shadow-md overflow-hidden">
                         <a href="https://www.dicoding.com/certificates/0LZ01N4E0P65" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/3.png" alt="" class="w-full"></a>
                     </div>
-                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/0LZ01N4E0P65" class="text-slate-50 underline hover:text-slate-100">Back-end applications for beginners</a></h3>
+                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/0LZ01N4E0P65" class="text-slate-50 underline hover:text-slate-100">BACK-END APPLICATION FOR BEGINNERS</a></h3>
                     <p class="font-medium text-base text-slate-300 mb-4 ">Publisher : Dicoding | August 2022 </p>
                     <ul class="list-disc text-slate-300 ">
                         <li class="mb-1">Get to know the role of front-end and back-end, how clients and servers communicate via the HTTP protocol, and the RESTFul API architecture in building web services.</li>
@@ -187,7 +187,7 @@
                     <div class="rounded-md shadow-md overflow-hidden">
                         <a href="https://www.dicoding.com/certificates/EYX42QWOWZDL" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/2.png" alt="" class="w-full"></a>
                     </div>
-                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/EYX42QWOWZDL" class="text-slate-50 underline hover:text-slate-100">Basic JavaScript</a></h3>
+                    <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3"> <a href="https://www.dicoding.com/certificates/EYX42QWOWZDL" class="text-slate-50 underline hover:text-slate-100">BASIC JAVASCRIPT</a></h3>
                     <p class="font-medium text-base text-slate-300 mb-4 ">Publisher : Dicoding | July 2022 </p>
                     <ul class="list-disc text-slate-300 ">
                         <li class="mb-1">Learn JavaScript fundamentals such as Variables, Data Types, and Loops.</li>
@@ -217,14 +217,14 @@
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/siakad.png" alt="" class="w-full">
                         </div>
-                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Academy information system website</h3>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Website-based Academic Information System</h3>
                         <p class="font-medium text-base text-slate-300">An academic information system is a website that displays information related to school academics. This website was created using HTML, CSS, PHP, Laravel Framework, MySQL database and for appearance using a template from Gentelella.</p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/divanusa.png" alt="" class="w-full">
                         </div>
-                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Carbon market website</h3>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Carbon Market Website</h3>
                         <p class="font-medium text-base text-slate-300">Carbon market website is a website that sells carbon emissions. This website is used using HTML, CSS, Laravel Framework, and MySQL database.</p>
                     </div>
                     <!-- <div class="mb-12 p-4 md:w-1/2">
