update link github

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                     fill="#fff" />
                             </svg>
                         </a>
-                        <a href="" target="_blank"
+                        <a href="https://github.com/mhddfajarr" target="_blank"
                             class="w-9 h-9 mr-3 rounded-xl flex justify-center items-center border border-slate-300 hover:border-amber-500 hover:bg-amber-500">
                             <svg role="img" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <title>GitHub</title>
