update link email

--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
                     </ul>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden">
-                        <a href="_blank" class="text-slate-50 underline hover:text-slate-100"><img src="dist/img/6.png" alt="" class="w-full"></a>
+                    <div class="rounded-md shadow-md overflow-hidden"><img src="dist/img/6.png" alt="" class="w-full">
                         
                     </div>
                     <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">GIT AND GITHUB</h3>
@@ -309,7 +308,7 @@
                             <path fill="currentColor"
                                 d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z" />
                         </svg>
-                        <p class="px-2">mhddfajar@gmail.com</p>
+                        <a href="mailto:mhddfajar@gmail.com"><p class="inline-block text-base hover:text-amber-500 px-2">mhddfajar@gmail.com</p></a>
                     </div>
                     <div class="flex items-center "><svg style="width:24px;height:24px" viewBox="0 0 24 24">
                             <path fill="currentColor"
