--- a/index.html
+++ b/index.html
@@ -99,14 +99,13 @@
                             class="text-bold text-slate-50">November 2019 - August 2023 | AMIKOM University, Yogyakarta</span>
                             <br>Bachelor of Information System (GPA 3.6)
                     </p>
-                    <p class="text-slate-50 ">ORGANIZATION</span>
+                    <p class="text-slate-300 font-medium text-base"><span
+                        class="text-bold text-slate-50">ORGANIZATION</span>
                         <ul class="list-disc text-slate-300 ">
                             <li class="mb-1">AMIKOM COMPUTER CLUB (AMCC)</li>
                             <p class="text-slate-300 mb-4">Learn things related to web development</p>
                         </ul>
                 </p>
-
-                    
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-bold uppercase text-amber-500 text-xl mb-4 lg:text-2xl">Experience</h3>
