--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-bold uppercase text-amber-500 text-xl mb-4 lg:text-2xl">Experience</h3>
                     <p class="text-slate-300 font-medium text-base mb-6"><span
-                            class="text-bold text-slate-50">SOON</span>
+                            class="text-bold text-slate-50">---</span>
                         <br>---
                     </p>
                 </div>
