--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-bold uppercase text-amber-500 text-xl mb-4 lg:text-2xl">Experience</h3>
                     <p class="text-slate-300 font-medium text-base mb-6"><span
-                            class="text-bold text-slate-50">---</span>
-                        <br>---
+                            class="text-bold text-slate-50">PT. Teknologi Indonesia (TLab) | Full Stack Engineer intern</span>
+                        <br>Mei 2024 - Present
                     </p>
+                </p>
                 </div>
                 <div class="w-full px-4 mb-10 lg:w-1/4">
                     <h2 class="font-bold uppercase text-xl text-amber-500 mb-4 lg:text-2xl">skills</h2>
