update layout skill

--- a/index.html
+++ b/index.html
@@ -115,23 +115,22 @@
                     </p>
                 </p>
                 </div>
-                <div class="w-full px-4 mb-10 lg:w-1/4">
-                    <h2 class="font-bold uppercase text-xl text-amber-500 mb-4 lg:text-2xl">skills</h2>
-                    <p class="text-slate-300 font-medium text-base lg:text-lg">
-                        HTML<br>
-                        CSS<br>
-                        PHP<br>
-                        JavaScript
-                    </p>
-                </div>
-                <div class="w-full px-4 mb-10 lg:w-1/4">
-                    <h2 class="font-bold uppercase text-xl text-bg opacity-0 mb-4 lg:text-2xl">skills</h2>
-                    <p class="text-slate-300 font-medium text-base lg:text-lg">
-                        Laravel Framework<br>
-                        CodeIgniter Framework<br>
-                        Microsoft Word<br>
-                        Microsoft Excel
-                    </p>
+                <div class="w-full px-4 mb-10 lg:w-1/2">
+                    <h2 class="font-bold uppercase text-xl text-amber-500 mb-4 lg:text-2xl">Skills</h2>
+                    <div class="flex justify-between text-slate-300 font-medium text-base lg:text-lg">
+                        <div>
+                            <p>HTML</p>
+                            <p>CSS</p>
+                            <p>JavaScript</p>
+                            <p>PHP</p>
+                        </div>
+                        <div>
+                            <p>Laravel Framework</p>
+                            <p>CodeIgniter Framework</p>
+                            <p>MySQL</p>
+                            <p>GIT and GitLab</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
