--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             </li>
                             <li class="text-slate-50 group">
                                 <a href="#sertificate"
-                                    class="text-base py-2 mx-8 flex group-hover:text-amber-500">Sertificate</a>
+                                    class="text-base py-2 mx-8 flex group-hover:text-amber-500">Certificate</a>
                             </li>
                             <li class="text-slate-50 group">
                                 <a href="#portfolio"
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
-                    <h2 class="font-bold uppercase text-xl text-amber-500 mb-4 lg:text-2xl">Sertificate</h2>
+                    <h2 class="font-bold uppercase text-xl text-amber-500 mb-4 lg:text-2xl">Certificate</h2>
                     <div class="w-full pt-5 border-t border-slate-700 justify-center">
                     </div>
                 </div>
@@ -336,7 +336,7 @@
                     <ul>
                         <li><a href="#home" class="inline-block text-base hover:text-amber-500">Home</a></li>
                         <li><a href="#about" class="inline-block text-base hover:text-amber-500">About</a></li>
-                        <li><a href="#sertificate" class="inline-block text-base hover:text-amber-500">Sertificate</a></li>
+                        <li><a href="#sertificate" class="inline-block text-base hover:text-amber-500">Certificate</a></li>
                         <li><a href="#portfolio" class="inline-block text-base hover:text-amber-500">Portfolio</a></li>
                     </ul>
 
