add: new project at showcase

--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
                     <p class="text-slate-300 font-medium text-base mb-6"><span
                             class="text-bold text-slate-50">PT. Teknologi Indonesia (TLab) | Full Stack Engineer intern</span>
                         <br>Mei 2024 - Present
+                        <li class="mb-1 text-slate-50">Contributed to  developing internal systems by creating comprehensive reports from Kiwi TCMS, utilizing the Laravel framework to ensure accurate and efficient data management.
+                        </li>
+                        <li class="mb-1 text-slate-50">Worked collaboratively within a team using       GitLab for version control, continuous integration, and effective project management.
+                        </li>
+                        <li class="mb-1 text-slate-50">Conducted weekly reviews with the team lead to ensure project quality and alignment with company objectives. 
+                        </li>
+                        <li class="mb-1 text-slate-50">Utilized Taiga for task management, ensuring organized and transparent project.
+                        </li>
+                        <li class="mb-4 text-slate-50">Managed and optimized databases using Azimut to support operational and application development needs.
+                        </li>
                     </p>
                 </p>
                 </div>
@@ -225,6 +235,13 @@
                         </div>
                         <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Website-based Academic Information System</h3>
                         <p class="font-medium text-base text-slate-300">An academic information system is a website that displays information related to school academics. This website was created using HTML, CSS, PHP, Laravel Framework, MySQL database and for appearance using a template from Gentelella.</p>
+                    </div>
+                    <div class="mb-12 p-4 md:w-1/2">
+                        <div class="rounded-md shadow-md overflow-hidden">
+                            <img src="dist/img/voucher-api.png" alt="" class="w-full">
+                        </div>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">API-Voucher</h3>
+                        <p class="font-medium text-base text-slate-300">A voucher management API project using Laravel, which includes features for creating, claiming, deleting vouchers upon claim, and filtering by selected categories. This API allows users to create new vouchers, claim vouchers, automatically delete claimed vouchers, and filter vouchers based on chosen categories.</p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
