add: concentration educatio

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <p class="text-slate-300 font-medium text-base mb-6"><span
                             class="text-bold text-slate-50">November 2019 - August 2023 | AMIKOM University, Yogyakarta</span>
                             <br>Bachelor of Information System (GPA 3.6)
+                            <br>Concentration: E-commerce (Learning how to design, build and develop websites)
                     </p>
                     <p class="text-slate-300 font-medium text-base"><span
                         class="text-bold text-slate-50">ORGANIZATION</span>
