--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/adminPanel.png" alt="" class="w-full">
                         </div>
-                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Admin Panel</h3>
+                        <h3 class="font-semibold text-xl text-slate-50 mt-5 mb-3">Filament Admin Panel</h3>
                         <p class="font-medium text-base text-slate-300">Our admin panel, built with the powerful Filament framework, offers comprehensive data management features, including robust CRUD actions, file import/export, and bulk import capabilities. It also features interactive widgets for real-time charts and statistics, providing immediate insights for quick decision-making. Additionally, it implements multi-tenancy.</p>
                     </div>
                     <!-- <div class="mb-12 p-4 md:w-1/2">
